[feat] : Like 기능 구현, BookController수정
임의로 User 클래스를 제작하였고 좋아요의 수를 볼 수 있거나 카운트를 할 수 있는 기능을 구현
기존의 BookController에서 카테고리까지 전부 처리하였는데 CategoryController를 새로 생성하여서 분리